--- a/miniprogram/pages/user-center/bill/detail.wxml
+++ b/miniprogram/pages/user-center/bill/detail.wxml
@@ -1,140 +1,142 @@
 <wxs src="../../format.wxs" module="filter" />
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-  <view slot="backText">返回</view>
-  <view slot="content">账单明细</view>
+    <view slot="backText">返回</view>
+    <view slot="content">账单明细</view>
 </cu-custom>
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
-  <view class='gray-text text-xs'>加载中...</view>
+    <view class='gray-text text-xs'>加载中...</view>
 </view>
 <!-- 会员充值 -->
 <block wx:if="{{bill.type==0}}">
-  <view>
-    <view class="padding">
-      充值店铺：{{shopDetail.name}}
+    <view>
+        <view class="padding">
+            充值店铺：{{shopDetail.name}}
+        </view>
+        <view class="padding">
+            充值金额：<span class="text-price">{{filter.formatMoney(bill.money)}}</span>
+        </view>
+        <view class="padding">
+            支付方式：微信支付
+        </view>
+        <view class="cu-card article">
+            <view class="cu-item shadow">
+                <view class="title" style="text-align: center;">
+                    <view class="text-cut">会员产品详情</view>
+                </view>
+                <view class="content">
+                    <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
+                        产品名称：{{vipPackageDetail.name}}
+                    </view>
+                    <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
+                        产品价格：<span class="text-price">{{filter.formatMoney(vipPackageDetail.price)}}</span>
+                    </view>
+                </view>
+                <view class="content">
+                    <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
+                        实际到账：<span class="text-price">{{filter.formatMoney(vipPackageDetail.entry)}}</span>
+                    </view>
+                    <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
+                        赠送啤酒：{{vipPackageDetail.beer}}瓶
+                    </view>
+                </view>
+                <view class="content">
+                    <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
+                        会员折扣：{{vipPackageDetail.rate/10}} 折
+                    </view>
+                </view>
+                <view class="content text-sm text-gray margin-top">
+                    {{vipPackageDetail.remarks}}
+                </view>
+            </view>
+        </view>
     </view>
-    <view class="padding">
-      充值金额：<span class="text-price">{{filter.formatMoney(bill.money)}}</span>
-    </view>
-    <view class="padding">
-      支付方式：微信支付
-    </view>
-    <view class="cu-card article">
-      <view class="cu-item shadow">
-        <view class="title" style="text-align: center;">
-          <view class="text-cut">会员产品详情</view>
-        </view>
-        <view class="content">
-          <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
-            产品名称：{{vipPackageDetail.name}}
-          </view>
-          <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
-            产品价格：<span class="text-price">{{filter.formatMoney(vipPackageDetail.price)}}</span>
-          </view>
-        </view>
-        <view class="content">
-          <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
-            实际到账：<span class="text-price">{{filter.formatMoney(vipPackageDetail.entry)}}</span>
-          </view>
-          <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
-            赠送啤酒：{{vipPackageDetail.beer}}瓶
-          </view>
-        </view>
-        <view class="content">
-          <view class="text-sm flex  padding-tb-sm" style="width: 50%;">
-            会员折扣：{{vipPackageDetail.rate/10}} 折
-          </view>
-        </view>
-        <view class="content text-sm text-gray margin-top">
-          {{vipPackageDetail.remarks}}
-        </view>
-      </view>
-    </view>
-  </view>
 </block>
 <!-- 会员消费 -->
 <block wx:if="{{bill.type==1||bill.type==2}}">
-  <view>
+
     <view class="padding">
-      消费店铺：{{shopDetail.name}}
+        消费店铺：{{shopDetail.name}}
     </view>
     <view class="padding">
-      消费金额：<span class="text-price">{{filter.formatMoney(orderDetail.total)}}</span>
+        消费金额：<span class="text-price">{{filter.formatMoney(orderDetail.total)}}</span>
     </view>
     <view class="padding">
-      支付方式：{{orderDetail.payType==1?'会员账号支付':'普通支付'}}
-      <span wx:if="{{orderDetail.rate}}">{{orderDetail.payType==1?'('+orderDetail.rate/10+'折)':''}}</span>
+        支付方式：{{orderDetail.payType==1?'会员账号支付':'普通支付'}}
+        <span wx:if="{{orderDetail.rate}}">{{orderDetail.payType==1?'('+orderDetail.rate/10+'折)':''}}</span>
     </view>
-  </view>
-  <view class="padding text-lg">
-    订单详情
-  </view>
-  <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
-    <view class="cu-list menu-avatar">
-      <view class="cu-item">
-        <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-        <view class="content">
-          <view class="text-grey">{{ goodsDetail.title }}</view>
-          <view wx:if="{{goodsDetail._id != '8d1a732f6668632f02bffddc546aef20'}}" class="text-gray text-sm flex" style="gap: 21rpx;">
-            <view style="color: gray;">
-              原价：<span class="text-price">{{filter.formatMoney(goodsDetail.price)}}</span>
+
+    <view class="padding text-lg">
+        订单详情
+    </view>
+    <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+        <view class="cu-list menu-avatar">
+            <view class="cu-item">
+                <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
+                <view class="content">
+                    <view class="text-grey">{{ goodsDetail.title }}</view>
+                    <view wx:if="{{goodsDetail._id != '8d1a732f6668632f02bffddc546aef20'}}" class="text-gray text-sm flex" style="gap: 21rpx;">
+                        <view wx:if="{{orderDetail.rate}}" class="text-orange">
+                            实付：<span class="text-price">{{filter.formatMoney(goodsDetail.price*orderDetail.rate / 100)}}</span>
+                        </view>
+                        <view wx:else style="color: gray;">
+                            实付：<span class="text-price">{{filter.formatMoney(goodsDetail.price)}}</span>
+                        </view>
+                        <view class="text-gray text-sm">
+                            x{{ goodsDetail.number}}
+                        </view>
+                    </view>
+                    <view wx:else class="text-gray text-sm flex" style="gap: 21rpx;">
+                        <view style="color: gray;">
+                            会员存酒取出
+                        </view>
+                        <view class="text-gray text-sm">
+                            x{{ goodsDetail.number}}
+                        </view>
+                    </view>
+                </view>
             </view>
-            <view class="text-orange">实付：<span class="text-price">{{filter.formatMoney(goodsDetail.price*orderDetail.rate / 100)}}</span></view>
-            <view class="text-gray text-sm">
-              x{{ goodsDetail.number}}
-            </view>
-          </view>
-          <view wx:else class="text-gray text-sm flex" style="gap: 21rpx;">
-            <view style="color: gray;">
-              会员存酒取出
-            </view>
-            <view class="text-gray text-sm">
-              x{{ goodsDetail.number}}
-            </view>
-          </view>
         </view>
-      </view>
+    </block>
+    <view class="padding">
+        支付时间：{{filter.format(bill.createDate,'YY-MM-DD hh:mm:ss')}}
     </view>
-  </block>
-  <view class="padding">
-    支付时间：{{filter.format(bill.createDate,'YY-MM-DD hh:mm:ss')}}
-  </view>
 </block>
 <!-- 店铺支出 -->
 <block wx:if="{{bill.type==3}}">
-  <view>
-    <view class="padding">
-      支出店铺：{{shopDetail.name}}
-    </view>
-    <view class="padding">
-      支出金额：<span class="text-price">{{filter.formatMoney(spendDetail.total)}}</span>
-    </view>
-  </view>
-  <view class="padding text-lg">
-    支出详情
-  </view>
-  <block wx:for="{{ spendDetail.listSpend }}" wx:key="_id" wx:for-index="index">
-    <view class="cu-list menu">
-      <view class="cu-item">
-        <view class="content">
-          <view class="text-grey" style="justify-content: space-between;">
-            {{item.name}}
-            <view class="text-gray">
-              x{{ item.number}}
-            </view>
-          </view>
-          <view class="text-gray text-sm flex" style="gap: 21rpx;">
-            <view style="color: gray;">
-              单价：<span class="text-price">{{filter.formatMoney(item.price)}}</span>
-            </view>
-            <view class="text-orange">
-              小计：<span class="text-price">{{filter.formatMoney(item.price*item.number)}}</span>
-            </view>
-          </view>
+    <view>
+        <view class="padding">
+            支出店铺：{{shopDetail.name}}
         </view>
-      </view>
+        <view class="padding">
+            支出金额：<span class="text-price">{{filter.formatMoney(spendDetail.total)}}</span>
+        </view>
     </view>
-  </block>
-  <view class="padding">
-    支付时间：{{filter.format(bill.createDate,'YY-MM-DD hh:mm:ss')}}
-  </view>
+    <view class="padding text-lg">
+        支出详情
+    </view>
+    <block wx:for="{{ spendDetail.listSpend }}" wx:key="_id" wx:for-index="index">
+        <view class="cu-list menu">
+            <view class="cu-item">
+                <view class="content">
+                    <view class="text-grey" style="justify-content: space-between;">
+                        {{item.name}}
+                        <view class="text-gray">
+                            x{{ item.number}}
+                        </view>
+                    </view>
+                    <view class="text-gray text-sm flex" style="gap: 21rpx;">
+                        <view style="color: gray;">
+                            单价：<span class="text-price">{{filter.formatMoney(item.price)}}</span>
+                        </view>
+                        <view class="text-orange">
+                            小计：<span class="text-price">{{filter.formatMoney(item.price*item.number)}}</span>
+                        </view>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </block>
+    <view class="padding">
+        支付时间：{{filter.format(bill.createDate,'YY-MM-DD hh:mm:ss')}}
+    </view>
 </block>
