--- a/miniprogram/pages/order/index.wxml
+++ b/miniprogram/pages/order/index.wxml
@@ -13,73 +13,74 @@
     <shopBar bind:onShopChange="onShopChange"></shopBar>
 
     <!-- 有数据 -->
-    <view wx:if="{{ orderList.length >= 1 }}">
-        <scroll-view scroll-y="true" style="height: {{containerHeight-150}}rpx;" refresher-enabled="true" bindrefresherrefresh="loadData" refresher-triggered="{{isRefreshing}}" bindscrolltolower="loadMoreData">
-            <block wx:for="{{ orderList }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
-                <view class="cu-card">
-                    <view class="cu-item shadow">
-                        <view wx:if="{{orderDetail.state==0}}" class="cu-tag bg-purple">待支付</view>
-                        <view wx:if="{{orderDetail.state==1}}" class="cu-tag bg-orange">排队中...</view>
-                        <view wx:if="{{orderDetail.state==2}}" class="cu-tag bg-purple">正在用餐</view>
-                        <view wx:if="{{orderDetail.state==3}}" class="cu-tag bg-gray">已完成</view>
+    <view wx:if="{{ list.length >= 1 }}">
+        <pageList style="height: {{containerHeight-150}}rpx;" getListData="{{getListData}}" page="{{page}}">
+            <view slot="listContent">
+                <block wx:for="{{ list }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
+                    <view class="cu-card">
+                        <view class="cu-item shadow">
+                            <view wx:if="{{orderDetail.state==0}}" class="cu-tag bg-purple">待支付</view>
+                            <view wx:if="{{orderDetail.state==1}}" class="cu-tag bg-orange">排队中...</view>
+                            <view wx:if="{{orderDetail.state==2}}" class="cu-tag bg-purple">正在用餐</view>
+                            <view wx:if="{{orderDetail.state==3}}" class="cu-tag bg-gray">已完成</view>
 
-                        <view wx:if="{{orderDetail.tableSeats&&orderDetail.tableSeats[0]}}" class="cu-tag">{{orderDetail.tableSeats[0].name}}</view>
-                        <view wx:if="{{orderDetail.dinersNumb}}" class="cu-tag">{{orderDetail.dinersNumb}}人用餐</view>
+                            <view wx:if="{{orderDetail.tableSeats&&orderDetail.tableSeats[0]}}" class="cu-tag">{{orderDetail.tableSeats[0].name}}</view>
+                            <view wx:if="{{orderDetail.dinersNumb}}" class="cu-tag">{{orderDetail.dinersNumb}}人用餐</view>
 
-                        <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
-                            <view class="cu-list menu-avatar">
-                                <view class="cu-item">
-                                    <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-                                    <view class="content">
-                                        <view class="text-grey">{{ goodsDetail.title }}</view>
-                                        <block wx:if="{{goodsDetail._id!='8d1a732f6668632f02bffddc546aef20'}}">
-                                            <view class="text-gray text-sm flex justify-between">
-                                                <view style="color: gray;">
-                                                    原价：<span class="text-price" style="{{orderDetail.payType==1?'text-decoration: line-through;':''}}">{{filter.formatMoney(goodsDetail.price)}}</span>
+                            <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+                                <view class="cu-list menu-avatar">
+                                    <view class="cu-item">
+                                        <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
+                                        <view class="content">
+                                            <view class="text-grey">{{ goodsDetail.title }}</view>
+                                            <block wx:if="{{goodsDetail._id!='8d1a732f6668632f02bffddc546aef20'}}">
+                                                <view class="text-gray text-sm flex justify-between">
+                                                    <view style="color: gray;">
+                                                        原价：<span class="text-price" style="{{orderDetail.payType==1?'text-decoration: line-through;':''}}">{{filter.formatMoney(goodsDetail.price)}}</span>
+                                                    </view>
+                                                    <view class="text-gray text-sm">
+                                                        x{{ goodsDetail.number}}
+                                                    </view>
                                                 </view>
-                                                <view class="text-gray text-sm">
-                                                    x{{ goodsDetail.number}}
+                                                <view wx:if="{{orderDetail.payType==1}}" class="text-orange">
+                                                    会员折扣价：
+                                                    <span class="text-price">{{filter.formatMoney(goodsDetail.price*orderDetail.rate / 100)}}</span>
+                                                    （{{orderDetail.rate/10}}折）
                                                 </view>
-                                            </view>
-                                            <view wx:if="{{orderDetail.payType==1}}" class="text-orange">
-                                                会员折扣价：
-                                                <span class="text-price">{{filter.formatMoney(goodsDetail.price*orderDetail.rate / 100)}}</span>
-                                                （{{orderDetail.rate/10}}折）
-                                            </view>
-                                        </block>
-                                        <block wx:else>
-                                            <view class="text-gray text-sm flex justify-between">
-                                                <view style="color: gray;">
-                                                    会员存酒
+                                            </block>
+                                            <block wx:else>
+                                                <view class="text-gray text-sm flex justify-between">
+                                                    <view style="color: gray;">
+                                                        会员存酒
+                                                    </view>
+                                                    <view class="text-gray text-sm">
+                                                        x{{ goodsDetail.number}}
+                                                    </view>
                                                 </view>
-                                                <view class="text-gray text-sm">
-                                                    x{{ goodsDetail.number}}
-                                                </view>
-                                            </view>
-                                        </block>
+                                            </block>
+                                        </view>
                                     </view>
                                 </view>
-                            </view>
-                        </block>
-                        <view class="content padding flex align-center justify-between">
-                            <view>
-                                {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
-                            </view>
-                            <view wx:if="{{orderDetail.state != 0}}">
-                                {{orderDetail.payType==0?'微信支付：':'会员支付：'}}
-                                <span style="color: red;font-size: large;" class="text-price">{{filter.formatMoney(orderDetail.total)}}</span>
-                            </view>
-                            <view wx:if="{{orderDetail.state==0}}">
-                                <button class="cu-btn bg-blue round sm" style="width: 100rpx;" bind:tap="gotoPayCar">
-                                    去支付
-                                </button>
+                            </block>
+                            <view class="content padding flex align-center justify-between">
+                                <view>
+                                    {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
+                                </view>
+                                <view wx:if="{{orderDetail.state != 0}}">
+                                    {{orderDetail.payType==0?'微信支付：':'会员支付：'}}
+                                    <span style="color: red;font-size: large;" class="text-price">{{filter.formatMoney(orderDetail.total)}}</span>
+                                </view>
+                                <view wx:if="{{orderDetail.state==0}}">
+                                    <button class="cu-btn bg-blue round sm" style="width: 100rpx;" bind:tap="gotoPayCar">
+                                        去支付
+                                    </button>
+                                </view>
                             </view>
                         </view>
                     </view>
-                </view>
-            </block>
-            <view class="cu-load bg-white {{isLoadMore?'loading':''}} {{!hasMore&&!isLoadMore?'over':''}}"></view>
-        </scroll-view>
+                </block>
+            </view>
+        </pageList>
     </view>
     <!-- 无数据 -->
     <block wx:else>
