--- a/miniprogram/pages/user-center/bill/index.wxml
+++ b/miniprogram/pages/user-center/bill/index.wxml
@@ -1,5 +1,5 @@
 <wxs src="../../format.wxs" module="filter" />
-<cu-custom bgColor="bg-white" isBack="{{true}}">
+<cu-custom bgColor="'bg-white'" isBack="{{true}}">
     <view slot="backText">返回</view>
     <view slot="content">我的账单</view>
 </cu-custom>
@@ -9,41 +9,45 @@
 <!-- 店铺 -->
 <shopBar bind:onShopChange="onShopChange" isShopManage="{{true}}"></shopBar>
 <!-- 有数据 -->
-<view wx:if="{{ billList.length >= 1 }}">
-    <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="loadData" bindscrolltolower="loadMore" refresher-triggered="{{isRefreshing}}">
-        <view class="cu-list menu">
-            <block wx:for="{{ billList }}" wx:key="_id" wx:for-index="index">
-                <view class="cu-item shadow arrow" bind:tap="gotoDetail" data-item="{{item}}">
-                    <view class="content ">
-                        <view class="text-cut" style="gap: 21rpx;">
-                            <view wx:if="{{isSuperManage||isShopManage}}" class="text-df">
-                                交易金额:
-                                <span wx:if="{{item.type==0||item.type==1||item.type==2}}" class="text-price" style="color:green">
-                                    {{filter.formatMoney(item.money)}}
-                                </span>
-                                <span wx:if="{{item.type==3}}" class="text-price" style="color:red">
-                                    {{filter.formatMoney(-item.money)}}
-                                </span>
-                                <view wx:if="{{item.type==3}}" class="cu-tag line-red round sm">店铺支出</view>
+<view wx:if="{{ list.length >= 1 }}">
+    <pageList style="height: {{containerHeight-150}}rpx;" getListData="{{getListData}}" page="{{page}}">
+        <view slot="listContent">
+            <view class="cu-list menu">
+                <block wx:for="{{ list }}" wx:key="_id" wx:for-index="index">
+                    <view class="cu-item shadow arrow" bind:tap="gotoDetail" data-item="{{item}}">
+                        <view class="content ">
+                            <view class="text-cut" style="gap: 21rpx;">
+                                <view wx:if="{{isSuperManage||isShopManage}}" class="text-df">
+                                    交易金额:
+                                    <span wx:if="{{item.type==0||item.type==1||item.type==2}}" class="text-price" style="color:green">
+                                        {{filter.formatMoney(item.money)}}
+                                    </span>
+                                    <span wx:if="{{item.type==3}}" class="text-price" style="color:red">
+                                        {{filter.formatMoney(-item.money)}}
+                                    </span>
+                                    <view wx:if="{{item.type==3}}" class="cu-tag line-red round sm">店铺支出</view>
+                                </view>
+                                <view wx:else class="text-df">
+                                    交易金额:
+                                    <span wx:if="{{item.type==0||item.type==1||item.type==2}}" class="text-price" style="color:red">
+                                        {{filter.formatMoney(-item.money)}}
+                                    </span>
+                                </view>
+                                <view wx:if="{{item.type==0}}" class="cu-tag line-purple round sm">会员充值</view>
+                                <view wx:if="{{item.type==1}}" class="cu-tag line-green round sm">会员消费</view>
+                                <view wx:if="{{item.type==2}}" class="cu-tag line-green round sm">微信支付</view>
                             </view>
-                            <view wx:else class="text-df">
-                                交易金额:
-                                <span wx:if="{{item.type==0||item.type==1||item.type==2}}" class="text-price" style="color:red">
-                                    {{filter.formatMoney(-item.money)}}
-                                </span>
+                            <view class="text-gray text-sm">
+                                {{filter.format(item.createDate, 'YY-MM-DD hh:mm:ss')}}
                             </view>
-                            <view wx:if="{{item.type==0}}" class="cu-tag line-purple round sm">会员充值</view>
-                            <view wx:if="{{item.type==1}}" class="cu-tag line-green round sm">会员消费</view>
-                            <view wx:if="{{item.type==2}}" class="cu-tag line-green round sm">微信支付</view>
-                        </view>
-                        <view class="text-gray text-sm">
-                            {{filter.format(item.createDate, 'YY-MM-DD hh:mm:ss')}}
                         </view>
                     </view>
-                </view>
-            </block>
+                </block>
+            </view>
         </view>
-    </scroll-view>
+    </pageList>
+    <!-- <scroll-view scroll-y="true" style="height: {{containerHeight-110}}rpx;" refresher-enabled="true" bindrefresherrefresh="loadData" bindscrolltolower="loadMore" refresher-triggered="{{isRefreshing}}">
+    </scroll-view> -->
 </view>
 <!-- 无数据 -->
 <block wx:else>
