--- a/miniprogram/pages/pay-car/index.wxml
+++ b/miniprogram/pages/pay-car/index.wxml
@@ -1,180 +1,174 @@
 <wxs src="../format.wxs" module="filter" />
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-    <view slot="backText">返回</view>
-    <view slot="content">{{shop.name}}</view>
+  <view slot="backText">返回</view>
+  <view slot="content">{{shop.name}}</view>
 </cu-custom>
 <view>
-    <!-- 数据加载，显示loading态 -->
-    <block wx:if="{{ isLoading }}">
-        <view class="tip_text">
-            加载中...
-        </view>
-    </block>
-    <!-- 数据加载完毕 -->
-    <block wx:if="{{ !isLoading }}">
-        <!-- 有数据 -->
-        <scroll-view scroll-y="true" style="height: {{containerHeight}}rpx;" wx:if="{{ orderList.length >= 1 }}">
-            <radio-group bindchange="onSelectOrder">
-                <block wx:for="{{ orderList }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
-                    <view class="cu-card" style="width: 100vw;">
-                        <view class="cu-item shadow">
-                            <view wx:if="{{orderDetail.state==2}}" class="cu-tag bg-green">已完成</view>
-                            <view wx:if="{{orderDetail.state==1}}" class="cu-tag bg-orange">制作中</view>
-                            <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
-                                <view class="cu-list menu-avatar">
-                                    <view class="cu-item">
-                                        <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
-                                        <view class="content flex-sub">
-                                            <view class="text-grey">{{ goodsDetail.title }}</view>
-                                            <block wx:if="{{goodsDetail._id!='8d1a732f6668632f02bffddc546aef20'}}">
-                                                <view class="text-gray text-sm flex justify-between">
-                                                    <view style="color: gray;">
-                                                        原价：<span class="text-price">{{filter.formatMoney(goodsDetail.price)}}</span>
-                                                    </view>
-                                                    <view class="text-gray text-sm">
-                                                        x{{ goodsDetail.number}}
-                                                    </view>
-                                                </view>
-                                                <view wx:if="{{vipLevel}}" class="text-orange">
-                                                    {{vipLevel.name}}价：
-                                                    <span class="text-price">{{filter.formatMoney(goodsDetail.price*vipLevel.rate / 100)}}</span>
-                                                    （{{vipLevel.rate/10}}折）
-                                                </view>
-                                            </block>
-                                            <block wx:else>
-                                                <view class="text-gray text-sm flex justify-between">
-                                                    <view style="color: gray;">
-                                                        会员存酒
-                                                    </view>
-                                                    <view class="text-gray text-sm">
-                                                        x{{ goodsDetail.number}}
-                                                    </view>
-                                                </view>
-                                            </block>
-                                        </view>
-                                    </view>
-                                </view>
-                            </block>
-                            <view class="content padding flex align-center justify-between">
-                                <view>
-                                    {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
-                                </view>
-                                <view class="margin-left ">
-                                    <radio value="{{orderDetail._id}}"></radio>
-                                </view>
-                            </view>
-                        </view>
-                    </view>
-                </block>
-            </radio-group>
-
-            <view style="position: fixed;bottom: 0;height: 160rpx;width: 100vw;background-color: white;display: flex;align-items: center;justify-content: space-between;">
-                <view style="margin-left: 16px;">
-                    <view wx:if="{{vipTotal}}">
-                        会员支付
-                        <span class="padding-left text-orange text-price">
-                            {{filter.formatMoney(vipTotal)}}
-                        </span>
-                    </view>
-                    <view wx:if="{{total}}">
-                        普通应付
-                        <span class="padding-left text-price">
-                            {{filter.formatMoney(total)}}
-                        </span>
-                    </view>
-                    <view wx:else>
-                        请先选择订单
-                    </view>
-                </view>
-                <view style="margin-right: 16px;">
-                    <button class="cu-btn  round bg-blue" bind:tap="pay" disabled="{{total==0}}">
-                        去支付
-                    </button>
-                </view>
-            </view>
-        </scroll-view>
-
-        <!-- 无数据 -->
-        <block wx:else>
-            <view class="tip_text">暂无数据</view>
-        </block>
-    </block>
-
-    <view class="cu-modal bottom-modal {{showDialogPay?'show':''}}">
-        <view class="cu-dialog">
-            <view class="cu-bar bg-white justify-end align-center " style="border-bottom:1px solid lightgray">
-                <view class="content">
-                    应付：<span class="text-price">{{filter.formatMoney(total)}}</span>
-                </view>
-                <view class="action" bindtap="closeDialogPay">
-                    <text class="cuIcon-close text-red"></text>
-                </view>
-            </view>
-            <view class="padding-top" style="text-align: start;padding-left: 60rpx;background-color: white;font-size: 30rpx;"> 请选座位(就餐人数 {{dinersNumb}}) </view>
-            <view class="padding bg-white">
-                <radio-group bindchange="onTableSelecte">
-                    <view class="cu-list menu" style="width: 90vw;">
-                        <view class="cu-item" wx:for="{{tablesList}}" wx:key="index">
-                            <view class="content">
-                                <view class="flex">
-                                    <view>{{item.name}}</view>
-                                    <view class="cu-tag round margin-left bg-blue sm">{{item.guiGe}}人座</view>
-                                    <view class="text-df" style="flex: 1;" wx:if="{{item.isIdle>0}}">
-                                        需排队(当前排队{{item.isIdle}}单)
-                                    </view>
-                                    <view class="text-green text-df" style="flex: 1;" wx:else>空闲</view>
-                                </view>
-                                <view class="text-gray text-sm" style="text-align: start;">{{item.remarks}}</view>
-                            </view>
-                            <view class="action">
-                                <radio class="radio" value="{{item._id}}"></radio>
-                            </view>
-                        </view>
-                    </view>
-                </radio-group>
-
-                <form catchsubmit="formSubmit" catchreset="formReset">
-                    <view class="cu-form-group align-start">
-                        <view class="title">备注</view>
-                        <textarea style="text-align: start;" name="remarks" maxlength="300" placeholder="可填写口味，偏好等..."></textarea>
-                    </view>
-
-                    <view style="text-align: start;padding-left: 30rpx;background-color: white;font-size: 30rpx;">
-                    优惠券
-                </view>
-
-                <radio-group bindchange="onCouponelecte">
-                    <view class="cu-list menu" style="width: 90vw;">
-                        <view class="cu-item" wx:for="{{vipAccount.coupon}}" wx:key="index">
-                            <view class="content">
-                                <view class="flex">
-                                    <view>{{item.value}}{{item.type==2?'元':'人/次'}}{{item.name}}</view>
-                                    <view class="cu-tag round margin-left bg-blue sm">剩余{{item.number}}张</view>
-                                </view>
-                                <view class="text-gray text-sm" style="text-align: start;">{{item.remarks}}</view>
-                            </view>
-                            <view class="action">
-                                <radio disabled="{{item.usePrice>total}}" class="radio" value="{{item._id}}"></radio>
-                            </view>
-                        </view>
-                    </view>
-                </radio-group>
-
-                    <view class="flex justify-between margin-bottom" style="gap: 18rpx;">
-                    <button wx:if="{{preferential}}" class="cu-btn round bg-blue text-orange" style="flex: 1;" data-type="vipPay" formType="submit">
-                        <text class="cuIcon-vip"></text>会员支付（<span class="text-price">{{filter.formatMoney(vipTotal)}}</span>）
-                    </button>
-                    <button class="cu-btn round bg-gray" style="{{preferential?'width: 210rpx;':'width: 90%;'}}" data-type="wxPay" formType="submit">
-                        <text class="cuIcon-pay"></text> 微信支付
-                    </button>
-                </view>
-                </form>
-
-               
-
-               
-            </view>
-        </view>
+  <!-- 数据加载，显示loading态 -->
+  <block wx:if="{{ isLoading }}">
+    <view class="tip_text">
+      加载中...
     </view>
+  </block>
+  <!-- 数据加载完毕 -->
+  <block wx:if="{{ !isLoading }}">
+    <!-- 有数据 -->
+    <scroll-view scroll-y="true" style="height: {{containerHeight}}rpx;" wx:if="{{ orderList.length >= 1 }}">
+      <radio-group bindchange="onSelectOrder">
+        <block wx:for="{{ orderList }}" wx:for-item="orderDetail" wx:key="_id" wx:for-index="index">
+          <view class="cu-card" style="width: 100vw;">
+            <view class="cu-item shadow">
+              <view wx:if="{{orderDetail.state==2}}" class="cu-tag bg-green">已完成</view>
+              <view wx:if="{{orderDetail.state==1}}" class="cu-tag bg-orange">制作中</view>
+              <block wx:for="{{ orderDetail.goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
+                <view class="cu-list menu-avatar">
+                  <view class="cu-item">
+                    <image class="cu-avatar round lg" src="{{goodsDetail.img||'../../images/icons/morentu.svg'}}" mode="aspectFill" />
+                    <view class="content flex-sub">
+                      <view class="text-grey">{{ goodsDetail.title }}</view>
+                      <block wx:if="{{goodsDetail._id!='8d1a732f6668632f02bffddc546aef20'}}">
+                        <view class="text-gray text-sm flex justify-between">
+                          <view style="color: gray;">
+                            原价：<span class="text-price">{{filter.formatMoney(goodsDetail.price)}}</span>
+                          </view>
+                          <view class="text-gray text-sm">
+                            x{{ goodsDetail.number}}
+                          </view>
+                        </view>
+                        <view wx:if="{{vipLevel}}" class="text-orange">
+                          {{vipLevel.name}}价：
+                          <span class="text-price">{{filter.formatMoney(goodsDetail.price*vipLevel.rate / 100)}}</span>
+                          （{{vipLevel.rate/10}}折）
+                        </view>
+                      </block>
+                      <block wx:else>
+                        <view class="text-gray text-sm flex justify-between">
+                          <view style="color: gray;">
+                            会员存酒
+                          </view>
+                          <view class="text-gray text-sm">
+                            x{{ goodsDetail.number}}
+                          </view>
+                        </view>
+                      </block>
+                    </view>
+                  </view>
+                </view>
+              </block>
+              <view class="content padding flex align-center justify-between">
+                <view>
+                  {{filter.format(orderDetail.createDate, 'YY-MM-DD hh:mm:ss')}}
+                </view>
+                <view class="margin-left ">
+                  <radio value="{{orderDetail._id}}"></radio>
+                </view>
+              </view>
+            </view>
+          </view>
+        </block>
+      </radio-group>
 
+      <view style="position: fixed;bottom: 0;height: 160rpx;width: 100vw;background-color: white;display: flex;align-items: center;justify-content: space-between;">
+        <view style="margin-left: 16px;">
+          <view wx:if="{{vipTotal}}">
+            会员支付
+            <span class="padding-left text-orange text-price">
+              {{filter.formatMoney(vipTotal)}}
+            </span>
+          </view>
+          <view wx:if="{{total}}">
+            普通应付
+            <span class="padding-left text-price">
+              {{filter.formatMoney(total)}}
+            </span>
+          </view>
+          <view wx:else>
+            请先选择订单
+          </view>
+        </view>
+        <view style="margin-right: 16px;">
+          <button class="cu-btn  round bg-blue" bind:tap="pay" disabled="{{total==0}}">
+            去支付
+          </button>
+        </view>
+      </view>
+    </scroll-view>
+
+    <!-- 无数据 -->
+    <block wx:else>
+      <view class="tip_text">暂无数据</view>
+    </block>
+  </block>
+
+  <view class="cu-modal bottom-modal {{showDialogPay?'show':''}}">
+    <view class="cu-dialog">
+      <view class="cu-bar bg-white justify-end align-center " style="border-bottom:1px solid lightgray">
+        <view class="content">
+          应付：<span class="text-price">{{filter.formatMoney(total)}}</span>
+        </view>
+        <view class="action" bindtap="closeDialogPay">
+          <text class="cuIcon-close text-red"></text>
+        </view>
+      </view>
+      <view class="padding-top" style="text-align: start;padding-left: 60rpx;background-color: white;font-size: 30rpx;"> 请选座位(就餐人数 {{dinersNumb}}) </view>
+      <view class="padding bg-white">
+        <radio-group bindchange="onTableSelecte">
+          <view class="cu-list menu" style="width: 90vw;height:160px;overflow-y: auto;">
+            <view class="cu-item" wx:for="{{tablesList}}" wx:key="index">
+              <view class="content">
+                <view class="flex">
+                  <view>{{item.name}}</view>
+                  <view class="cu-tag round margin-left bg-blue sm">{{item.guiGe}}人座</view>
+                  <view class="text-df" style="flex: 1;" wx:if="{{item.isIdle>0}}">
+                    需排队(当前排队{{item.isIdle}}单)
+                  </view>
+                  <view class="text-green text-df" style="flex: 1;" wx:else>空闲</view>
+                </view>
+                <view class="text-gray text-sm" style="text-align: start;">{{item.remarks}}</view>
+              </view>
+              <view class="action">
+                <radio class="radio" value="{{item._id}}"></radio>
+              </view>
+            </view>
+          </view>
+        </radio-group>
+
+        <form catchsubmit="formSubmit" catchreset="formReset">
+          <view class="cu-form-group align-start">
+            <view class="title">备注</view>
+            <textarea class="bg-gray" style="text-align: start;padding: 12px;border-radius: 4px;" name="remarks" maxlength="300" placeholder="可填写口味，偏好等...">
+            </textarea>
+          </view>
+
+          <view style="text-align: start;padding-left: 30rpx;background-color: white;font-size: 30rpx;">
+            优惠券
+          </view>
+          <radio-group bindchange="onCouponelecte">
+            <view class="cu-list menu" style="width: 90vw;">
+              <view class="cu-item" wx:for="{{vipAccount.coupon}}" wx:key="index">
+                <view class="content">
+                  <view class="flex">
+                    <view>{{item.value}}{{item.type==2?'元':'人/次'}}{{item.name}}</view>
+                    <view class="cu-tag round margin-left bg-blue sm">剩余{{item.number}}张</view>
+                  </view>
+                  <view class="text-gray text-sm" style="text-align: start;">{{item.remarks}}</view>
+                </view>
+                <view class="action">
+                  <radio disabled="{{item.usePrice>total}}" class="radio" value="{{item._id}}"></radio>
+                </view>
+              </view>
+            </view>
+          </radio-group>
+          <view class="flex justify-between margin-bottom" style="gap: 18rpx;">
+            <button wx:if="{{preferential}}" class="cu-btn round bg-blue text-orange" style="flex: 1;" data-type="vipPay" formType="submit">
+              <text class="cuIcon-vip"></text>会员支付（<span class="text-price">{{filter.formatMoney(vipTotal)}}</span>）
+            </button>
+            <button class="cu-btn round bg-gray" style="{{preferential?'width: 210rpx;':'width: 90%;'}}" data-type="wxPay" formType="submit">
+              <text class="cuIcon-pay"></text> 微信支付
+            </button>
+          </view>
+        </form>
+      </view>
+    </view>
+  </view>
 </view>
