--- a/miniprogram/pages/super-manage/coupon-edit/index.wxml
+++ b/miniprogram/pages/super-manage/coupon-edit/index.wxml
@@ -1,48 +1,55 @@
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-    <view slot="backText">返回</view>
-    <view slot="content">新增优惠券</view>
+  <view slot="backText">返回</view>
+  <view slot="content">新增优惠券</view>
 </cu-custom>
 
 <form catchsubmit="formSubmit" catchreset="formReset">
-    <view class="cu-form-group margin-top">
-        <view class="title lable-width">优惠券名称</view>
-        <input name="name" value="{{vip.name}}" placeholder="请输入..."></input>
-    </view>
-    <view class="cu-form-group">
-        <view class="title lable-width">类型</view>
-        <radio-group bindchange="radioChange">
-            <label class="padding" wx:for="{{types}}" wx:key="value">
-                <radio value="{{item.value}}" checked="{{item.checked}}" />
-                {{item.name}}
-            </label>
-        </radio-group>
-    </view>
-    <view class="cu-form-group">
-        <view class="title lable-width">价值</view>
-        <input name="price" placeholder="请填写..." value="{{vip.price}}"></input>
-    </view>
-    <view class="cu-form-group">
-        <view class="title lable-width">开始日期</view>
-        <picker mode="date" value="{{startDate}}"  bindchange="bindStartDateChange">
-            <view class="picker">
-                 {{startDate}}
-            </view>
-        </picker>
-    </view>
-    <view class="cu-form-group">
-        <view class="title lable-width">结束日期</view>
-        <picker mode="date" value="{{endDate}}" start="{{startDate}}" bindchange="bindEndDateChange">
-            <view class="picker">
-                 {{endDate}}
-            </view>
-        </picker>
-    </view>
-    <view class="cu-form-group align-start">
-        <view class="title lable-width">备注</view>
-        <textarea name="remarks" value="{{vip.remarks}}" maxlength="300" placeholder="请输入备注..."></textarea>
-    </view>
-    <view class="flex padding" style="gap: 8px">
-        <button class="cu-btn round bg-blue" formType="submit">提交</button>
-        <button class="cu-btn round bg-black" formType="reset">重置</button>
-    </view>
+  <view class="cu-form-group margin-top">
+    <view class="title lable-width">优惠券名称</view>
+    <input name="name" value="{{coupon.name}}" placeholder="请输入..."></input>
+  </view>
+  <view class="cu-form-group">
+    <view class="title lable-width">类型 </view>
+    <radio-group name='type' bindchange="radioChange">
+      <label class="padding" wx:for="{{types}}" wx:key="value">
+        <radio value="{{item.value}}" checked="{{item.value==type}}" />
+        {{item.name}}
+      </label>
+    </radio-group>
+  </view>
+  <view class="cu-form-group">
+    <view class="title lable-width">价值</view>
+    <input name="value" type="digit" placeholder="请填写..." value="{{coupon.value}}"></input>
+    <view>元</view>
+  </view>
+  <view wx:if="{{type==2}}" class="cu-form-group">
+    <view class="title lable-width">开始日期</view>
+    <picker name='startDate' mode="date" value="{{coupon.startDate}}" bindchange="bindStartDateChange">
+      <view class="picker">
+        {{coupon.startDate||'请选择'}}
+      </view>
+    </picker>
+  </view>
+  <view wx:if="{{type==2}}" class="cu-form-group">
+    <view class="title lable-width">结束日期</view>
+    <picker name='endDate' mode="date" value="{{coupon.endDate}}" start="{{coupon.startDate}}" bindchange="bindEndDateChange">
+      <view class="picker">
+        {{coupon.endDate||'请选择'}}
+      </view>
+    </picker>
+  </view>
+  <view class="cu-form-group">
+    <view class="title">起始金额</view>
+    <view>（满多少元可用）</view>
+    <input name="usePrice" type="digit" placeholder="请填写..." value="{{coupon.usePrice||coupon.value||0}}"></input>
+    <view>元</view>
+  </view>
+  <view class="cu-form-group align-start">
+    <view class="title lable-width">备注</view>
+    <textarea name="remarks" value="{{coupon.remarks}}" maxlength="300" placeholder="请输入备注..."></textarea>
+  </view>
+  <view class="flex padding" style="gap: 8px">
+    <button class="cu-btn round bg-blue" formType="submit">提交</button>
+    <button class="cu-btn round bg-black" formType="reset">重置</button>
+  </view>
 </form>
